--- a/professional_website.html
+++ b/professional_website.html
@@ -447,7 +447,7 @@
                     <div>
                         <div class="job-title">SEK - <span data-en="Backend Developer" data-pt="Desenvolvedor Backend">Backend Developer</span></div>
                     </div>
-                    <div class="job-period" data-en="January 2023 - Present" data-pt="Janeiro 2023 - Presente">January 2023 - Present</div>
+                    <div class="job-period" data-en="January 2023 - Now" data-pt="Janeiro 2023 - Presente">January 2023 - Now</div>
                 </div>
                 <div class="job-description">
                     <h4 data-en="Development" data-pt="Desenvolvimento">Development</h4>
@@ -510,7 +510,7 @@
                 </div>
                 <div class="contact-item">
                     <h3 data-en="Location" data-pt="Localização">Location</h3>
-                    <p>Santos - SP, Brasil</p>
+                    <p data-en="Santos - SP, Brazil" data-pt="Santos - SP, Brasil">Santos - SP, Brazil</p>
                 </div>
                 <div class="contact-item">
                     <h3 data-en="Portfolio" data-pt="Portfólio">Portfolio</h3>
